migrate to jakarta and java 17
automatic refactor done by openrewrite